<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ok_label">OK</string>
    <string name="cancel_label">Cancel</string>
    <string name="game_no1">Game No. </string>
    <string name="delete_game_no">Delete？ Game No. </string>
    <string name="app_name">Freecell</string>
    <string name="settings_label">Settings&#8230;</string>
    <string name="settings_title">Freecell settings</string>
    <string name="settings_shortcut">g</string>
    <string name="undo_label">Undo</string>
    <string name="redo_label">Redo</string>
    <string name="newgame_label">New</string>
    <string name="selectgame_label">Select</string>
    <string name="setting_label">Setting</string>
    <string name="history_label">History</string>
    <string name="load_label">Load</string>
    <string name="delete_label">Delete</string>
    <string name="gameNo_label">Game No.</string>
    <string name="date_label">Date</string>
    <string name="moves_label">Moves</string>
    <string name="autoplay_title">Auto play</string>
    <string name="autoplay_summary">Cards are moved automatically. </string>
    <string name="bigimage_title">Big image</string>
    <string name="bigimage_summary">A big image is displayed when it points out. </string>
    <string name="setting_title">Freecell settings</string>
    <string name="dominant_hand">Dominant hand</string>
    <string name="dominant_hand_summary">The direction out of which big drawing come. </string>

    <string-array name="hand_entries">
        <item>Right</item>
        <item>Left</item>
    </string-array>
    <string-array name="hand_entryvalues">
        <item>right</item>
        <item>left</item>
    </string-array>

    <string name="onehand_title">One hand</string>
    <string name="onehand_summary">Operation with one hand with the thumb. </string>
    <string name="record_title">Record</string>
    <string name="record_summary">Record histry. </string>
    <string name="you_win"><center>Congratulation, you win!</center></string>
    <string name="you_deadlock"><center>Deadlock!</center></string>
    <string name="game_no">Game # </string>
    <string name="cards_left">Cards Left : </string>
    <string name="moves">Moves : </string>
    <string name="setup_game">A setup of a game number</string>
    <string name="app_name1">Records</string>
    <string name="empty">No records!</string>
    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="about_title">About</string>
    <string name="about_summary">About Freecell,How to play</string>
    <string name="about_text">
        	How to play\n
        	\n
        	There is the following cells in a place.\n
        	\n
        	Column cell: There are eight rows downward.A card is distributed at random at the time of a game start.\n
        	Free cell: Four cells are at the upper left.One arbitrary card can be placed. \n
        	Home cell: Four cells are at the upper right. You can put here in order from 1 to K for every suit.\n
        	\n
        	You become a victory when all the cards are moved to a home cell. 
        	A card is movable between each cell. However, movement from a home cell cannot be performed. 
        	You can alternately color, superimposing the cards in descending order in the column cells.
        	Move is one card each, but You can move if possible plurality.\n
        	\n
        	How to move in the automatic play\n
        	\n
        	Tap or flick to the right: Move to the right direction\n
        	Flick to the left: Move to the left\n
        	Flick up: Moved to the home cell\n
        	drag down: Drag-and-drop\n
    </string>
    
    
</resources>