<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp" >

        
         <Button
             android:id="@+id/button6"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
             android:background="@drawable/button_color"
             android:onClick="setting"
             android:text="@string/setting_label" />
        
        
        
         <Button
             android:id="@+id/button4"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
             android:background="@drawable/button_color"
             android:onClick="startHistory"
             android:text="@string/history_label" />
 
<!-- style="@style/myButton" -->
         <Button
             android:id="@+id/button2"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1.3"
             android:background="@drawable/button_color"
             android:onClick="newGame"
             android:text="@string/newgame_label" />
   
        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="@drawable/button_color"
            android:onClick="selectGame"
            android:text="@string/selectgame_label" />
         <Button
            android:id="@+id/button5"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:background="@drawable/button_color"
            android:onClick="redo"
            android:textColor="@drawable/button_text_color"
            android:text="@string/redo_label" />  
        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:background="@drawable/button_color"
            android:onClick="undo"
            android:textColor="@drawable/button_text_color"
            android:text="@string/undo_label" />  
        
    </LinearLayout>

    <jp.nankinhaze.MySurfaceView
        android:id="@+id/myview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="2dp"
        android:paddingBottom="2dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingTop="2dp" />

</LinearLayout>
