<?xml version="1.0" encoding="utf-8"?>
<!--
 ! Excerpted from "Hello, Android! 3e",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/eband3 for more book information.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

   <!-- Note built-in ids for 'list' and 'empty' -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp" >
        
        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
             android:background="@drawable/button_color"
            android:onClick="gameNo"
            android:text="@string/gameNo_label" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
             android:background="@drawable/button_color"
            android:onClick="date"
            android:text="@string/date_label" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
             android:background="@drawable/button_color"
            android:onClick="moves"
            android:text="@string/moves_label" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </LinearLayout>

   <ListView
       android:id="@android:id/list"
       android:layout_width="wrap_content"
       android:layout_height="446dp"
       android:scrollbarAlwaysDrawVerticalTrack="true"
       android:scrollbarStyle="insideInset" />
   
   <TextView
      android:id="@android:id/empty"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/empty" />
</LinearLayout>